--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
-    body { font-family: "Cairo", sans-serif; background-color: #0b1220; }
+    body {
+      font-family: "Cairo", sans-serif;
+      background-color: #0b1220;
+    }
     .bg-tech {
       background-image:
         radial-gradient(circle at 10% 10%, rgba(255,255,255,0.02), transparent 2%),
@@ -37,11 +40,88 @@
           <p class="text-xs text-gray-400">سوق الأجهزة وقطع الحاسوب</p>
         </div>
       </div>
-
-      <!-- Navigation -->
+  <!-- Navigation -->
       <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
-        <!-- الأقسام ... (كما هي في كودك) -->
-        <!-- ... -->
+        <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">أحدث المنتجات</button>
+
+        <!-- PC -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium pc-toggle">
+            <span>PC</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="pc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">تجميعات</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت شاشة</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">معالجات</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">رامات</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت أم</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">مراوح تبريد</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">SSD / HDD</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">وحدة الطاقة</button>
+          </div>
+        </div>
+
+        <!-- Laptop -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium laptop-toggle">
+            <span>Laptop</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="laptop-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">HP</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Dell</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Lenovo</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Asus</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">MSI</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Apple</button>
+          </div>
+        </div>
+
+        <!-- Phones -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium phone-toggle">
+            <span>هواتف</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="phone-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Samsung</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xiaomi</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Huawei</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Oppo</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Infinix</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">iPhone</button>
+          </div>
+        </div>
+
+        <!-- Consoles -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium console-toggle">
+            <span>Consoles</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="console-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">PlayStation</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xbox</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Nintendo</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Handhelds</button>
+          </div>
+        </div>
+
+        <!-- Accessories -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium acc-toggle">
+            <span>إكسسوارات</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="acc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">فأرة</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">لوحة مفاتيح</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">سماعات</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الحاسوب</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الهاتف</button>
+          </div>
+        </div>
       </nav>
     </aside>
 
@@ -55,23 +135,11 @@
             <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold">إنشاء حساب</a>
             <a href="login.html" class="px-4 py-2 rounded-full bg-white/10 hover:bg-white/20 transition">تسجيل الدخول</a>
           </div>
-
-          <!-- User Info (يظهر بعد تسجيل الدخول) -->
-          <div id="userBox" class="hidden items-center gap-3">
-            <img id="userPhoto" src="https://cdn-icons-png.flaticon.com/512/149/149071.png"
-                 class="w-10 h-10 rounded-full border border-yellow-400 object-cover">
-            <span id="userName" class="font-semibold text-yellow-400">مستخدم</span>
-            <button id="logoutBtn"
-                    class="px-3 py-1.5 text-sm rounded-full bg-red-600 hover:bg-red-500 transition">
-              تسجيل الخروج
-            </button>
-          </div>
         </div>
 
         <!-- Search -->
         <div class="flex-1 max-w-xl sm:ml-4 flex flex-col sm:flex-row gap-2">
-          <input type="text" placeholder="ابحث عن منتج أو فئة..."
-                 class="flex-1 px-4 py-2 rounded-lg bg-white/10 text-white placeholder-white/70 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition">
+          <input type="text" placeholder="ابحث عن منتج أو فئة..." class="flex-1 px-4 py-2 rounded-lg bg-white/10 text-white placeholder-white/70 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition">
           <select class="px-3 py-2 rounded-lg bg-white/10 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
             <option>كل الفئات</option>
             <option>PC</option>
@@ -102,11 +170,7 @@
       {btn: '.pc-toggle', menu: '.pc-submenu'},
       {btn: '.laptop-toggle', menu: '.laptop-submenu'},
       {btn: '.phone-toggle', menu: '.phone-submenu'},
-      {btn: '.console-toggle', menu: '.console-submenu'},
-      {btn: '.acc-toggle', menu: '.acc-submenu'},
-      {btn: '.screen-toggle', menu: '.screen-submenu'},
     ];
-
     toggles.forEach(t => {
       const btn = document.querySelector(t.btn);
       const menu = document.querySelector(t.menu);
@@ -122,36 +186,40 @@
     });
   </script>
 
-  <!-- Firebase -->
+  <!-- ✅ Firebase Auth Integration -->
   <script type="module">
     import { auth } from "./firebase-config.js";
     import { onAuthStateChanged, signOut } 
       from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
     const authBtns = document.getElementById("authBtns");
-    const userBox = document.getElementById("userBox");
-    const userName = document.getElementById("userName");
-    const userPhoto = document.getElementById("userPhoto");
-    const logoutBtn = document.getElementById("logoutBtn");
 
-    // ✅ مراقبة حالة المستخدم
+    // إنشاء صندوق المستخدم
+    const userBox = document.createElement("div");
+    userBox.className = "hidden items-center gap-3 cursor-pointer";
+    userBox.innerHTML = `
+      <img id="userPhoto" class="w-10 h-10 rounded-full border-2 border-yellow-400 object-cover" alt="صورة المستخدم">
+      <span id="userName" class="font-semibold text-yellow-400"></span>
+    `;
+    authBtns.parentElement.appendChild(userBox);
+
+    // مراقبة حالة المستخدم
     onAuthStateChanged(auth, (user) => {
       if (user) {
         authBtns.classList.add("hidden");
         userBox.classList.remove("hidden");
-        userName.textContent = user.displayName || "مستخدم";
-        if (user.photoURL) userPhoto.src = user.photoURL;
+        document.getElementById("userName").textContent = user.displayName || "مستخدم";
+        document.getElementById("userPhoto").src = user.photoURL || "https://cdn-icons-png.flaticon.com/512/149/149071.png";
+
+        // تسجيل خروج عند النقر على الصورة
+        userBox.addEventListener("click", async () => {
+          await signOut(auth);
+          location.reload();
+        });
       } else {
         authBtns.classList.remove("hidden");
         userBox.classList.add("hidden");
       }
-    });
-
-    // ✅ تسجيل الخروج
-    logoutBtn.addEventListener("click", async () => {
-      await signOut(auth);
-      alert("تم تسجيل الخروج ✅");
-      window.location.reload();
     });
   </script>
 </body>
